--- a/modules/offered_insurance/locale/fr_FR.po
+++ b/modules/offered_insurance/locale/fr_FR.po
@@ -56,6 +56,104 @@ msgstr ""
 "  Error:\n"
 "%s"
 
+msgctxt "error:document.description:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:document.description:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:document.receive.attach:"
+msgid "Duplicate name on attachments : %s"
+msgstr "Nom similiare sur les pièces jointes : %s"
+
+msgctxt "error:document.request.line:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:document.request.line:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:document.request:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:document.request:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:document.rule-document.description:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:document.rule-document.description:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:document.rule:"
+msgid "Cannot import : no object %s with functional key: \"%s\" were found."
+msgstr ""
+"Impossible d'importer : aucun objet trouvé %s avec la clé fonctionnelle : "
+"\"%s\"."
+
+msgctxt "error:document.rule:"
+msgid ""
+"Cannot import : the following objects:\n"
+"%s\n"
+"share the same functional key:\n"
+"\"%s\"."
+msgstr ""
+"Impossible d'importer : Les objets suivants :\n"
+"%s\n"
+"partagent la même clé fonctionnelle :\n"
+"\"%s\"."
+
+msgctxt "error:document.rule:"
+msgid "You can not have 2 business rules that overlaps!"
+msgstr "2 règles se chevauchent!"
+
 msgctxt "error:document.template-offered.product:"
 msgid "Cannot import : no object %s with functional key: \"%s\" were found."
 msgstr ""
@@ -650,6 +748,274 @@ msgctxt "field:document.description,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
+msgctxt "field:document.receive.attach,attachments:"
+msgid "Attachments"
+msgstr "Pièces jointes"
+
+msgctxt "field:document.receive.attach,id:"
+msgid "ID"
+msgstr "ID"
+
+msgctxt "field:document.receive.attach,resource:"
+msgid "Resource"
+msgstr "Ressource"
+
+msgctxt "field:document.receive.request,id:"
+msgid "ID"
+msgstr "ID"
+
+msgctxt "field:document.receive.request,kind:"
+msgid "Kind"
+msgstr "Type de donnée"
+
+msgctxt "field:document.receive.request,request:"
+msgid "Request"
+msgstr "Demande"
+
+msgctxt "field:document.receive.request,value:"
+msgid "Value"
+msgstr "Valeur"
+
+msgctxt "field:document.receive.set_requests,documents:"
+msgid "Documents"
+msgstr "Documents"
+
+msgctxt "field:document.receive.set_requests,id:"
+msgid "ID"
+msgstr "ID"
+
+msgctxt "field:document.request,create_date:"
+msgid "Create Date"
+msgstr "Date de Création"
+
+msgctxt "field:document.request,create_date_:"
+msgid "Creation date"
+msgstr "Date de Création"
+
+msgctxt "field:document.request,create_uid:"
+msgid "Create User"
+msgstr "Créé par"
+
+msgctxt "field:document.request,documents:"
+msgid "Documents"
+msgstr "Documents"
+
+msgctxt "field:document.request,id:"
+msgid "ID"
+msgstr "ID"
+
+msgctxt "field:document.request,is_complete:"
+msgid "Is Complete"
+msgstr "Reçu"
+
+msgctxt "field:document.request,needed_by:"
+msgid "Requested for"
+msgstr "Requis pour"
+
+msgctxt "field:document.request,needed_by_str:"
+msgid "Master as String"
+msgstr "Objet maitre"
+
+msgctxt "field:document.request,rec_name:"
+msgid "Name"
+msgstr "Nom"
+
+msgctxt "field:document.request,request_description:"
+msgid "Request Description"
+msgstr "Description de la demande"
+
+msgctxt "field:document.request,write_date:"
+msgid "Write Date"
+msgstr "Date de mise à jour"
+
+msgctxt "field:document.request,write_uid:"
+msgid "Write User"
+msgstr "Mis à jour par"
+
+msgctxt "field:document.request,xml_id:"
+msgid "XML Id"
+msgstr "Identifiant XML"
+
+msgctxt "field:document.request.line,attachment:"
+msgid "Attachment"
+msgstr "Pièce jointe"
+
+msgctxt "field:document.request.line,create_date:"
+msgid "Create Date"
+msgstr "Date de Création"
+
+msgctxt "field:document.request.line,create_date_:"
+msgid "Creation date"
+msgstr "Date de Création"
+
+msgctxt "field:document.request.line,create_uid:"
+msgid "Create User"
+msgstr "Créé par"
+
+msgctxt "field:document.request.line,document_desc:"
+msgid "Document Definition"
+msgstr "Définition des documents"
+
+msgctxt "field:document.request.line,for_object:"
+msgid "Needed For"
+msgstr "Requis pour"
+
+msgctxt "field:document.request.line,id:"
+msgid "ID"
+msgstr "ID"
+
+msgctxt "field:document.request.line,rec_name:"
+msgid "Name"
+msgstr "Nom"
+
+msgctxt "field:document.request.line,received:"
+msgid "Received"
+msgstr "Reçus"
+
+msgctxt "field:document.request.line,reception_date:"
+msgid "Reception Date"
+msgstr "Date de réception"
+
+msgctxt "field:document.request.line,request:"
+msgid "Document Request"
+msgstr "Demande de Documents"
+
+msgctxt "field:document.request.line,request_date:"
+msgid "Request Date"
+msgstr "Date de la demande"
+
+msgctxt "field:document.request.line,send_date:"
+msgid "Send Date"
+msgstr "Date d'envoi"
+
+msgctxt "field:document.request.line,write_date:"
+msgid "Write Date"
+msgstr "Date de mise à jour"
+
+msgctxt "field:document.request.line,write_uid:"
+msgid "Write User"
+msgstr "Mis à jour par"
+
+msgctxt "field:document.request.line,xml_id:"
+msgid "XML Id"
+msgstr "Identifiant XML"
+
+msgctxt "field:document.rule,config_kind:"
+msgid "Conf. kind"
+msgstr "Type de Conf."
+
+msgctxt "field:document.rule,create_date:"
+msgid "Create Date"
+msgstr "Date de Création"
+
+msgctxt "field:document.rule,create_date_:"
+msgid "Creation date"
+msgstr "Date de Création"
+
+msgctxt "field:document.rule,create_uid:"
+msgid "Create User"
+msgstr "Créé par"
+
+msgctxt "field:document.rule,documents:"
+msgid "Documents"
+msgstr "Documents"
+
+msgctxt "field:document.rule,end_date:"
+msgid "To Date"
+msgstr "Date de Fin"
+
+msgctxt "field:document.rule,id:"
+msgid "ID"
+msgstr "ID"
+
+msgctxt "field:document.rule,kind:"
+msgid "Kind"
+msgstr "Type de donnée"
+
+msgctxt "field:document.rule,offered:"
+msgid "Offered"
+msgstr "Offre"
+
+msgctxt "field:document.rule,rec_name:"
+msgid "Name"
+msgstr "Nom"
+
+msgctxt "field:document.rule,rule:"
+msgid "Rule Engine"
+msgstr "Moteur de Règle"
+
+msgctxt "field:document.rule,rule_extra_data:"
+msgid "Rule Extra Data"
+msgstr "Paramètres de Rêgle"
+
+msgctxt "field:document.rule,start_date:"
+msgid "From Date"
+msgstr "Date de Début"
+
+msgctxt "field:document.rule,template:"
+msgid "Template"
+msgstr "Modèle"
+
+msgctxt "field:document.rule,template_behaviour:"
+msgid "Template Behaviour"
+msgstr "Comportement du Modèle"
+
+msgctxt "field:document.rule,view_rec_name:"
+msgid "Name"
+msgstr "Nom"
+
+msgctxt "field:document.rule,write_date:"
+msgid "Write Date"
+msgstr "Date de mise à jour"
+
+msgctxt "field:document.rule,write_uid:"
+msgid "Write User"
+msgstr "Mis à jour par"
+
+msgctxt "field:document.rule,xml_id:"
+msgid "XML Id"
+msgstr "Identifiant XML"
+
+msgctxt "field:document.rule-document.description,create_date:"
+msgid "Create Date"
+msgstr "Date de Création"
+
+msgctxt "field:document.rule-document.description,create_date_:"
+msgid "Creation date"
+msgstr "Date de Création"
+
+msgctxt "field:document.rule-document.description,create_uid:"
+msgid "Create User"
+msgstr "Créé par"
+
+msgctxt "field:document.rule-document.description,document:"
+msgid "Document"
+msgstr "Document"
+
+msgctxt "field:document.rule-document.description,id:"
+msgid "ID"
+msgstr "ID"
+
+msgctxt "field:document.rule-document.description,rec_name:"
+msgid "Name"
+msgstr "Nom"
+
+msgctxt "field:document.rule-document.description,rule:"
+msgid "Rule"
+msgstr "Règle"
+
+msgctxt "field:document.rule-document.description,write_date:"
+msgid "Write Date"
+msgstr "Date de mise à jour"
+
+msgctxt "field:document.rule-document.description,write_uid:"
+msgid "Write User"
+msgstr "Mis à jour par"
+
+msgctxt "field:document.rule-document.description,xml_id:"
+msgid "XML Id"
+msgstr "Identifiant XML"
+
 msgctxt "field:document.template,code:"
 msgid "Code"
 msgstr "Code"
@@ -1146,6 +1512,10 @@ msgctxt "field:offered,description:"
 msgid "Description"
 msgstr "Description"
 
+msgctxt "field:offered,document_rules:"
+msgid "Document Rules"
+msgstr "Règles des document requis"
+
 msgctxt "field:offered,end_date:"
 msgid "End Date"
 msgstr "Date de Fin"
@@ -1165,6 +1535,10 @@ msgstr "Nom"
 msgctxt "field:offered,start_date:"
 msgid "Start Date"
 msgstr "Date de Début"
+
+msgctxt "field:offered,sub_document_rules:"
+msgid "Sub Document Rules"
+msgstr "Sous règles des documents requis"
 
 msgctxt "field:offered,summary:"
 msgid "Summary"
@@ -1526,6 +1900,10 @@ msgctxt "field:offered.option.description,description:"
 msgid "Description"
 msgstr "Description"
 
+msgctxt "field:offered.option.description,document_rules:"
+msgid "Document Rules"
+msgstr "Règles des documents requis"
+
 msgctxt "field:offered.option.description,end_date:"
 msgid "End Date"
 msgstr "Date de Fin"
@@ -1577,6 +1955,10 @@ msgstr "Nom"
 msgctxt "field:offered.option.description,start_date:"
 msgid "Start Date"
 msgstr "Date de Début"
+
+msgctxt "field:offered.option.description,sub_document_rules:"
+msgid "Sub Document Rules"
+msgstr "Sous règles des documents requis"
 
 msgctxt "field:offered.option.description,summary:"
 msgid "Summary"
@@ -1690,6 +2072,10 @@ msgctxt "field:offered.product,description:"
 msgid "Description"
 msgstr "Description"
 
+msgctxt "field:offered.product,document_rules:"
+msgid "Document Rules"
+msgstr "Règles des document requis"
+
 msgctxt "field:offered.product,end_date:"
 msgid "End Date"
 msgstr "Date de Fin"
@@ -1729,6 +2115,10 @@ msgstr "Nom"
 msgctxt "field:offered.product,start_date:"
 msgid "Start Date"
 msgstr "Date de Début"
+
+msgctxt "field:offered.product,sub_document_rules:"
+msgid "Sub Document Rules"
+msgstr "Sous règles des documents requis"
 
 msgctxt "field:offered.product,summary:"
 msgid "Summary"
@@ -2038,6 +2428,34 @@ msgctxt "model:document.description,name:"
 msgid "Document Description"
 msgstr "Descripteur de Document"
 
+msgctxt "model:document.receive.attach,name:"
+msgid "Document Receive Attach"
+msgstr "Réception de documents"
+
+msgctxt "model:document.receive.request,name:"
+msgid "Document Receive Request"
+msgstr "Demande de documents"
+
+msgctxt "model:document.receive.set_requests,name:"
+msgid "Document Receive Set Requests"
+msgstr "Demande de documents"
+
+msgctxt "model:document.request,name:"
+msgid "Document Request"
+msgstr "Demande de Documents"
+
+msgctxt "model:document.request.line,name:"
+msgid "Document Request Line"
+msgstr "Ligne de demande de documents"
+
+msgctxt "model:document.rule,name:"
+msgid "Document Managing Rule"
+msgstr "Règles de gestion des documents"
+
+msgctxt "model:document.rule-document.description,name:"
+msgid "Rule to Document Description Relation"
+msgstr "Relation descripteur de document règles"
+
 msgctxt "model:document.template,name:"
 msgid "Document Template"
 msgstr "Modèle de Lettre"
@@ -2311,8 +2729,7 @@ msgstr ""
 msgctxt "model:rule_engine.rule_parameter,selection:option_age_kind"
 msgid ""
 "real : Real\n"
-"at_given_day_of_year : At Given Day of Year\n"
-"at_end_of_month : At End of Month"
+"at_given_day_of_year : At Given Day of Year"
 msgstr ""
 "real: Réel\n"
 "at_given_day_of_year: A un jour donné\n"
@@ -2333,6 +2750,62 @@ msgstr "Type d'age pour règle de résiliation"
 msgctxt "model:rule_engine.rule_parameter,string:option_max_age"
 msgid "Maximum age for option (age included)"
 msgstr "Age maximum pour l'option (age inclu)"
+
+msgctxt "selection:document.receive.request,kind:"
+msgid ""
+msgstr " "
+
+msgctxt "selection:document.request,needed_by:"
+msgid ""
+msgstr " "
+
+msgctxt "selection:document.request.line,for_object:"
+msgid ""
+msgstr " "
+
+msgctxt "selection:document.rule,config_kind:"
+msgid "Advanced"
+msgstr "Avancé"
+
+msgctxt "selection:document.rule,config_kind:"
+msgid "Simple"
+msgstr "Simple"
+
+msgctxt "selection:document.rule,kind:"
+msgid ""
+msgstr " "
+
+msgctxt "selection:document.rule,kind:"
+msgid "Loss"
+msgstr "Préjudice"
+
+msgctxt "selection:document.rule,kind:"
+msgid "Main"
+msgstr "Principale"
+
+msgctxt "selection:document.rule,kind:"
+msgid "Sub Elem"
+msgstr "Sous élément"
+
+msgctxt "selection:document.rule,offered:"
+msgid "Option Description"
+msgstr "Garantie"
+
+msgctxt "selection:document.rule,offered:"
+msgid "Product"
+msgstr "Produit"
+
+msgctxt "selection:document.rule,template_behaviour:"
+msgid ""
+msgstr " "
+
+msgctxt "selection:document.rule,template_behaviour:"
+msgid "Add"
+msgstr "Ajouter"
+
+msgctxt "selection:document.rule,template_behaviour:"
+msgid "Remove"
+msgstr "Remplacer"
 
 msgctxt "selection:document.template,kind:"
 msgid ""
@@ -2630,6 +3103,42 @@ msgctxt "view:document.description:"
 msgid "Documents"
 msgstr "Documents"
 
+msgctxt "view:document.receive.attach:"
+msgid "Attachments"
+msgstr "Pièces jointes"
+
+msgctxt "view:document.receive.request:"
+msgid "Document Receive Request"
+msgstr "Demande de documents"
+
+msgctxt "view:document.receive.set_requests:"
+msgid "Document Request"
+msgstr "Demande de Documents"
+
+msgctxt "view:document.request.line:"
+msgid "Document"
+msgstr "Document"
+
+msgctxt "view:document.request.line:"
+msgid "Documents"
+msgstr "Documents"
+
+msgctxt "view:document.request:"
+msgid "Document Request"
+msgstr "Demande de Documents"
+
+msgctxt "view:document.request:"
+msgid "Requests"
+msgstr "Demandes"
+
+msgctxt "view:document.request:"
+msgid "Send Request"
+msgstr "Envoyer la demande"
+
+msgctxt "view:document.rule:"
+msgid "Document Rule"
+msgstr "Règle de gestion des documents"
+
 msgctxt "view:document.template.version:"
 msgid "Document Template Version"
 msgstr "Version de Lettre"
@@ -2773,3 +3282,27 @@ msgstr "Annuler"
 msgctxt "wizard_button:document.create,select_model,preview_document:"
 msgid "Preview"
 msgstr "Prévisualiser"
+
+msgctxt "wizard_button:document.receive,attachment_setter,end:"
+msgid "Cancel"
+msgstr "Annuler"
+
+msgctxt "wizard_button:document.receive,attachment_setter,only_store:"
+msgid "Next"
+msgstr "Suivant"
+
+msgctxt "wizard_button:document.receive,input_document,end:"
+msgid "Cancel"
+msgstr "Annuler"
+
+msgctxt "wizard_button:document.receive,input_document,notify_request:"
+msgid "Complete"
+msgstr "Terminer"
+
+msgctxt "wizard_button:document.receive,select_instance,attachment_setter:"
+msgid "Continue"
+msgstr "Continuer"
+
+msgctxt "wizard_button:document.receive,select_instance,end:"
+msgid "Cancel"
+msgstr "Annuler"
