coopbusiness : Populate Changelogs from commit messages

--- a/modules/account_aggregate/CHANGELOG
+++ b/modules/account_aggregate/CHANGELOG
@@ -1,3 +1,5 @@
+* Allow to use move date as a parameter
+* Improve description
 * Add aggregate posting option on a journal
 * Add aggregate option on journal
 
