--- a/modules/account_cog/CHANGELOG
+++ b/modules/account_cog/CHANGELOG
@@ -1,2 +1,5 @@
+* Allow to filter third party balance per account
+* Pad fiscal years sequences
+
 Version 1.2 - 2014-07-01
 * Changelog file creation
