--- a/modules/endorsement_insurance/CHANGELOG
+++ b/modules/endorsement_insurance/CHANGELOG
@@ -1,2 +1,5 @@
+* Add extra_premium endorsement
+* Add new_covered_element_option endorsement
+
 Version 1.2 - 2014-07-01
 * Changelog file creation
