--- a/modules/cog_utils/CHANGELOG
+++ b/modules/cog_utils/CHANGELOG
@@ -1,5 +1,6 @@
 * Externalize batches settings into a custom .conf file referenced by
 trytond.conf 'config_file' entry in a '[batch]' section.
+* Revamp export / import
 
 Version 1.2 - 2014-07-01
 * Changelog file creation
