--- a/modules/account_aggregate/CHANGELOG
+++ b/modules/account_aggregate/CHANGELOG
@@ -1,3 +1,4 @@
+Version 1.3 - 2015-01-22
 * Allow to use move date as a parameter
 * Improve description
 * Add aggregate posting option on a journal
