--- a/modules/account_payment_cog/CHANGELOG
+++ b/modules/account_payment_cog/CHANGELOG
@@ -1,3 +1,4 @@
+Version 1.3 - 2015-01-22
 * Add reject fee invoices
 * Allow to easily get the xml sepa message
 * Mass validation of payment groups
