--- a/modules/cog_utils/CHANGELOG
+++ b/modules/cog_utils/CHANGELOG
@@ -1,3 +1,4 @@
+Version 1.3 - 2015-01-22
 * Externalize batches settings into a custom .conf file referenced by
 trytond.conf 'config_file' entry in a '[batch]' section.
 * Revamp export / import
