--- a/modules/contract_loan_invoice/CHANGELOG
+++ b/modules/contract_loan_invoice/CHANGELOG
@@ -1,3 +1,4 @@
+Version 1.3 - 2015-01-22
 * Calculate base premium amount per loan
 * Use contract.premium.amount to cache invoice lines to be generated
 * Use cache to improve performances
