--- a/modules/endorsement_loan/CHANGELOG
+++ b/modules/endorsement_loan/CHANGELOG
@@ -1,3 +1,4 @@
+Version 1.3 - 2015-01-22
 * Properly manage capital_per_mil extra premium endorsement
 * Add loan share endorsement
 * Allow to select contracts to recalculate
