--- a/modules/endorsement/CHANGELOG
+++ b/modules/endorsement/CHANGELOG
@@ -2,6 +2,7 @@
 * Allow to specify restoration order
 
 Version 1.3 - 2015-01-22
+* Configure relation_mixin for export import
 * Add sub-state to endorsement
 * Allow to revert back to the version before the endorsement application
 * Add rollback_date
