--- a/modules/debug/locale/fr_FR.po
+++ b/modules/debug/locale/fr_FR.po
@@ -1,4 +1,4 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -108,7 +108,7 @@ msgstr "Modèle cible"
 
 msgctxt "help:ir.model.debug.model_info,to_evaluate:"
 msgid "Use the 'instance' keyword to get the instanciated model"
-msgstr "Utiliser l'instance keyword pour avoir le modèle instancié"
+msgstr "Utiliser le mot-clef 'instance' pour avoir le modèle instancié"
 
 msgctxt "model:debug.visualize,name:"
 msgid "Debug Visualize"
