--- a/modules/contract/CHANGELOG
+++ b/modules/contract/CHANGELOG
@@ -1,5 +1,5 @@
+* Add wizard to stop (terminate / void) contracts
 * Add relate to event logs from contract if the module is installed
-
 * Allow to pre-set termination reason
 
 Version 1.3 - 2015-01-22
