--- a/modules/commission_insurer/locale/fr_FR.po
+++ b/modules/commission_insurer/locale/fr_FR.po
@@ -1,4 +1,4 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -26,9 +26,9 @@ msgctxt "field:commission.create_invoice_principal.ask,journal:"
 msgid "Journal"
 msgstr "Journal"
 
-msgctxt "field:commission.create_invoice_principal.ask,party:"
-msgid "Principal"
-msgstr "Assureur"
+msgctxt "field:commission.create_invoice_principal.ask,insurers:"
+msgid "Insurers"
+msgstr "Assureurs"
 
 msgctxt "field:insurer,waiting_account:"
 msgid "Waiting Account"
@@ -57,3 +57,7 @@ msgstr "OK"
 msgctxt "wizard_button:commission.create_invoice_principal,ask,end:"
 msgid "Cancel"
 msgstr "Annuler"
+
+msgctxt "error:received_premiums:"
+msgid "Received Premium"
+msgstr "Primes Reçues"
